src/objects/Request_Data_Asset__c.object
<CustomObject>
    <description>Join object relating RWE Data Assets to Requests.</description>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Related Data Assets</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Data Asset</label>
    <nameField>
        <displayFormat>RWE-RDA-{000000000}</displayFormat>
        <label>Related Data Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ValidAssetEdit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Request__r.Request_Status__c) &lt;&gt; &apos;New&apos;)</errorConditionFormula>
        <errorMessage>You cannot add Data Asset. Request status is not &quot;New&quot;.</errorMessage>
    </validationRules>
</CustomObject>